changes to css and html on index. working on whitespace bug below bottom nav.

--- a/css/personal_page_styling.css
+++ b/css/personal_page_styling.css
@@ -1,12 +1,14 @@
-.wrapper {
-    margin:0 0 0 0;
+body {
+    color: white;
+    background-color: black;
+    margin: 0;
     padding: 0 0 0 0;
-    width: 100%;
+    font-size: 1.5em;
 }
 
-body {
-    background-color: #333;
-    color: white;
+.navbar {
+    margin-top: 0;
+    margin-bottom: 0 !important;
 }
 
 p {
@@ -23,19 +25,19 @@ a:visited {
 
 .btm-info-field ul {
     list-style-type: none;
-    padding:2%;
-
+    padding: 1em;
 }
 
 ul li {
-    padding:1%;
+    padding: 1em;
 }
 
 .navbar {
-    font-size: 2em;
+    font-size: 1.5em;
     background-color: #00A1B2;
-    height: 80px;
+    height: 100px;
     width: 100%;
+    margin-bottom: 0;
 }
 
 .nav-pills {
@@ -43,20 +45,28 @@ ul li {
 }
 
 .btm-info-field {
-    height: 275px;
+    height: 100%;
     background-color: #00A1B2;
     font-size: 1.5em;
     font-family: 'Rasa', serif;
+    margin-bottom: 0;
+    padding-bottom: 0;
 }
 
 /*home page*/
 #banner-bg {
     width: 100%;
-    height: 600px;
+    height: 60em;
+    background-color: #333;
+    background-size: cover;
+    margin-top: 0;
+    padding-top: 0;
+    margin-bottom: 0;
+    padding-bottom: 0;
 }
 
 h1#banner-name {
-    font-size: 3.5em;
+    font-size: 4em;
     position: relative;
     top:35%;
 }
